fix: :green_heart: fix build

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,26 +1,23 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
-project_name: go-npdel
-
 before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    # - go generate ./...
 builds:
   - env:
       - CGO_ENABLED=0
+    dir: .
     goos:
       - linux
-      - windows
       - darwin
+      - windows
       - freebsd
 archives:
   - files:
       - README.md
       - LICENSE
-  - replacements:
+    replacements:
       darwin: Darwin
       linux: Linux
       windows: Windows
